--- a/frontend/src/app/post/components/post-card/post-card.html
+++ b/frontend/src/app/post/components/post-card/post-card.html
@@ -166,11 +166,10 @@
                 </svg>
             </button>
         </div>
-        <p class="report-description">Please describe the issue with this post. Our team will review your report.</p>
         <textarea name="report" placeholder="Describe the problem..." #reportData></textarea>
         <div class="report-actions">
             <button class="btn-cancel-report" (click)="onReport()">Cancel</button>
-            <button class="btn-submit-report" (click)="submitReport(post.postUuid, reportData.value); reportData.value=''">
+            <button class="btn-submit-report" (click)="onPrepareSubmitReport(reportData.value)">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                     <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471z"/>
                 </svg>
@@ -183,5 +182,36 @@
             </svg>
             {{message.message}}
         </p>
+    </div>
+
+    <!-- Confirmation Popup -->
+    <div *ngIf="showReportConfirmation" class="confirmation-overlay" (click)="onCancelReport()">
+        <div class="confirmation-dialog" (click)="$event.stopPropagation()">
+            <div class="confirmation-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
+                    <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+                </svg>
+            </div>
+            <h3 class="confirmation-title">Submit Report?</h3>
+            <p class="confirmation-message">
+                Are you sure you want to submit this report? Our moderation team will be notified and will review this post for policy violations.
+            </p>
+            <div class="confirmation-actions">
+                <button class="btn-confirmation-cancel" (click)="onCancelReport()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                    </svg>
+                    Cancel
+                </button>
+                <button class="btn-confirmation-confirm" (click)="onConfirmReport()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
+                    </svg>
+                    Yes, Submit Report
+                </button>
+            </div>
+        </div>
     </div>
 </div>
