--- a/frontend/src/app/profile/component/profile.html
+++ b/frontend/src/app/profile/component/profile.html
@@ -52,30 +52,11 @@
                 <h3>Report User</h3>
                 <button class="close-btn" (click)="onReport()">✕</button>
             </div>
-            <p class="report-description">Please describe why you're reporting this user. Our team will review your report.</p>
-            <div class="report-reasons">
-                <label class="reason-option">
-                    <input type="radio" name="reportReason" value="spam" #reason1>
-                    <span>Spam or misleading</span>
-                </label>
-                <label class="reason-option">
-                    <input type="radio" name="reportReason" value="harassment" #reason2>
-                    <span>Harassment or bullying</span>
-                </label>
-                <label class="reason-option">
-                    <input type="radio" name="reportReason" value="inappropriate" #reason3>
-                    <span>Inappropriate content</span>
-                </label>
-                <label class="reason-option">
-                    <input type="radio" name="reportReason" value="other" #reason4>
-                    <span>Other</span>
-                </label>
-            </div>
-            <textarea name="reportProfile" placeholder="Additional details (optional)..." #reportData></textarea>
+            <textarea name="reportProfile" placeholder="Describe why you're reporting this user..." #reportData></textarea>
             <div class="report-actions">
                 <button class="btn btn-cancel" (click)="onReport()">Cancel</button>
                 <button class="btn btn-submit"
-                    (click)="onSubmitReport(profileRes.uuid, reportData.value); reportData.value=''">
+                    (click)="onPrepareSubmitReport(profileRes.uuid, reportData.value)">
                     <span class="btn-icon">🚨</span>
                     Submit Report
                 </button>
@@ -84,6 +65,37 @@
         <div *ngIf="message" class="message success-message">
             <span class="message-icon">✓</span>
             {{message.message}}
+        </div>
+    </div>
+
+    <!-- Confirmation Popup -->
+    <div *ngIf="showReportConfirmation" class="confirmation-overlay" (click)="onCancelReport()">
+        <div class="confirmation-dialog" (click)="$event.stopPropagation()">
+            <div class="confirmation-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
+                    <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+                </svg>
+            </div>
+            <h3 class="confirmation-title">Submit User Report?</h3>
+            <p class="confirmation-message">
+                Are you sure you want to submit this report? Our moderation team will be notified and will review this user's behavior for policy violations.
+            </p>
+            <div class="confirmation-actions">
+                <button class="btn-confirmation-cancel" (click)="onCancelReport()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                    </svg>
+                    Cancel
+                </button>
+                <button class="btn-confirmation-confirm" (click)="onConfirmReport()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
+                    </svg>
+                    Yes, Submit Report
+                </button>
+            </div>
         </div>
     </div>
 
